# Toshi

./: .dockerignore  .gitignore  .gitpod.yml  .travis.yml  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  SECURITY.md  azure-pipelines.yml  build.rs  codecov.yml  deny.toml  doc.json  docker-compose.yml  requests.http  roadmap.md  rustfmt.toml  schema.json  summary.http
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
ci/: azure-install-apt-deps.yml  azure-install-deps.yml  azure-install-kcov.yml  azure-install-rust.yml  azure-run-kcov.yml  azure-rustfmt.yml  coverage.sh  install_capnp.sh  set_path.sh
config/: config-bench.toml  config-rpc.toml  config.toml  consul.json  logging.toml
docs/: api.raml
proto/: cluster.proto  placement.proto  wal.capnp
scripts/: Dockerfile  Dockerfile.builder  Makefile
src/: commit.rs  handle.rs  handlers.rs  index.rs  lib.rs  main.rs  results.rs  router.rs  settings.rs  shutdown.rs  support.rs  transaction.rs  utils.rs  wal_capnp.rs
src/cluster/: client.rs  connect.rs  connection.rs  consul.rs  consul_interface.rs  mod.rs  node.rs  ops.rs  placement_server.rs  remote_handle.rs  rpc_server.rs  server.rs  shard.rs
src/cluster/placement/: background.rs  mod.rs
src/error/: mod.rs
src/handlers/: bulk.rs  index.rs  mod.rs  root.rs  search.rs  summary.rs
src/query/: aggregate.rs  bool.rs  facet.rs  fuzzy.rs  mod.rs  phrase.rs  range.rs  regex.rs  term.rs
src/query/agg/: mod.rs
src/query/aggregate/: bucket.rs  mod.rs  sum.rs
toshi-client/: Cargo.toml
toshi-client/examples/: bool_query.rs  exact_query.rs  hyper_example.rs  range_query.rs  sync_search.rs
toshi-client/src/: error.rs  hyper_client.rs  isahc_client.rs  lib.rs
toshi-proto/: Cargo.toml  build.rs
toshi-proto/proto/: cluster.proto  eraftpb.proto
toshi-proto/src/: lib.rs
toshi-query/: Cargo.toml
toshi-query/src/: error.rs  lib.rs  results.rs  search.rs
toshi-query/src/query/: bool.rs  fuzzy.rs  mod.rs  phrase.rs  range.rs  regex.rs  term.rs
toshi-query/src/query/agg/: mod.rs
toshi-raft/: Cargo.toml
toshi-raft/src/: handle.rs  lib.rs  proposal.rs  raft_io.rs  raft_node.rs  rpc_server.rs  rpc_utils.rs  state.rs  storage.rs
toshi-server/: Cargo.toml
toshi-server/src/: commit.rs  handle.rs  index.rs  lib.rs  raft_catalog.rs  router.rs  settings.rs  shutdown.rs  support.rs  utils.rs
toshi-server/src/cluster/: mod.rs  remote_handle.rs  shard.rs
toshi-server/src/handlers/: bulk.rs  index.rs  list.rs  mod.rs  root.rs  search.rs  summary.rs
toshi-server/tests/: lib.rs
toshi-test/: Cargo.toml
toshi-test/src/: lib.rs  server.rs  test.rs
toshi-types/: Cargo.toml
toshi-types/benches/: json.rs
toshi-types/src/: client.rs  error.rs  extra_errors.rs  lib.rs  server.rs
toshi-types/src/query/: bool.rs  boolean.rs  facet.rs  fuzzy.rs  mod.rs  phrase.rs  range.rs  regex.rs  term.rs
