[package]
name    = "toshi"
version = "0.1.1"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"

[[bin]]
name = "toshi"

[lib]
path = "src/lib.rs"

[workspace]
members = [ "./", "toshi-proto", "toshi-test" ]

[dependencies]
toshi-proto            = { path = "toshi-proto" }
tower                  = "^0.1"
tower-buffer           = "^0.1"
tower-hyper            = "^0.1"
tower-request-modifier = "^0.1"
http                   = "^0.1"
bytes                  = "^0.4"
hyper                  = "^0.12"
serde_json             = "^1.0"
serde_urlencoded       = "^0.6"
futures                = "^0.1"
tantivy                = "^0.10"
tokio                  = "^0.1"
tokio-signal           = "^0.2"
config                 = "^0.9"
failure                = "^0.1"
num_cpus               = "^1"
hostname               = "^0.1"
base64                 = "^0.10"
crossbeam              = "^0.7"
hashbrown              = "^0.6"
parking_lot            = "^0.9"
tracing                = "^0.1"
rand                   = { version = "^0.7", features = ["log"] }
serde                  = { version = "^1.0", features = ["derive"] }
clap                   = { version = "^2.3", features = ["color"] }
uuid                   = { version = "^0.7", features = ["v4"] }
tower-grpc             = { version = "^0.1", features = ["tower-hyper"] }
tower-consul           = { git = "https://github.com/LucioFranco/tower-consul" }
tracing-futures        = "0.1.0"
tracing-log            = "^0.1"
tracing-fmt            = "^0.1"

[dev-dependencies]
remove_dir_all = "^0.5"
pretty_assertions = "^0.6"
lazy_static = "^1.3"
toshi-test = { path = "toshi-test" }


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
rpath = false
codegen-units = 1