[package]
name    = "toshi-server"
version = "0.1.1"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"

[[bin]]
name = "toshi"

[lib]
path = "src/lib.rs"

[workspace]
members = [ "./", "toshi-proto", "toshi-test", "toshi-client", "toshi-types" ]

[dependencies]
toshi-proto            = { path = "toshi-proto" }
toshi-types            = { path = "toshi-types" }
tower                  = "^0.1"
tower-buffer           = "^0.1"
tower-hyper            = "^0.1"
tower-request-modifier = "^0.1"
http                   = "^0.1"
bytes                  = "^0.4"
hyper                  = "^0.12"
serde_json             = "^1.0"
serde_urlencoded       = "^0.6"
futures                = "^0.3"
tantivy                = "^0.10"
tokio                  = "^0.1"
tokio-signal           = "^0.2"
config                 = "^0.9"
thiserror              = "^1.0"
anyhow                 = "^1.0"
hostname               = "^0.2"
base64                 = "^0.11"
crossbeam              = "^0.7"
hashbrown              = "^0.6"
parking_lot            = "^0.10"
tracing                = "^0.1"
rand                   = { version = "^0.7", features = ["log"] }
serde                  = { version = "^1.0", features = ["derive"] }
clap                   = { version = "^2.3", features = ["color"] }
uuid                   = { version = "^0.8", features = ["serde", "v4"] }
tower-grpc             = { version = "^0.1", features = ["tower-hyper"] }
tracing-futures        = "^0.1"
tracing-log            = "^0.1"
tracing-fmt            = "^0.1"

[dev-dependencies]
remove_dir_all = "^0.5"
pretty_assertions = "^0.6"
lazy_static = "^1.3"
toshi-test = { path = "toshi-test" }


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
rpath = false
codegen-units = 1