[package]
name    = "toshi"
version = "0.1.1"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A client for a full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"

[dependencies]
toshi-types = { path = "../toshi-types" }
async-trait = "^0.1"
http        = "^0.2"
thiserror   = "^1.0"
anyhow      = "^1.0"
serde       = "^1.0"
serde_json  = "^1.0"
tantivy     = "^0.12"

[dependencies.isahc]
version = "^0.9"
features = ["json"]

[dev-dependencies]
tokio = "^0.2"
toshi-test = { path = "../toshi-test" }