[package]
name    = "toshi"
version = "0.1.1"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A client for a full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"
autoexamples = false

[[example]]
name = "sync_search"

[[example]]
name = "bool_query"

[[example]]
name = "exact_query"

[[example]]
name = "range_query"

[[example]]
name = "hyper_example"
required-features = ["hyper_client"]

[features]
default = ["isahc_client"]
isahc_client = ["isahc"]
hyper_client = ["hyper", "bytes"]
tls = ["hyper_client", "hyper-tls"]
rust_tls = ["hyper_client", "hyper-rustls"]

[dependencies]
toshi-types = { path = "../toshi-types" }
async-trait = "^0.1"
http        = "^0.2"
thiserror   = "^1.0"
serde       = "^1.0"
serde_json  = "^1.0"
tantivy     = "^0.15"
tokio       = { version = "^1", features = ["full"] }
bytes       = { version = "^1", optional = true }

[dependencies.isahc]
version = "^1"
features = ["json"]
optional = true

[dependencies.hyper]
version = "^0.14.10"
features = ["stream"]
optional = true

[dependencies.hyper-tls]
version = "^0.5"
optional = true

[dependencies.hyper-rustls]
version = "^0.22"
optional = true

[dev-dependencies]
tokio = "^1"
