[package]
name    = "toshi-proto"
version = "0.1.0"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"
build = "build.rs"

[build-dependencies]
tonic-build       = "^0.3"

[dependencies]
tonic        = "^0.3"
bytes        = "^0.6"
prost        = "^0.6"
prost-types  = "^0.6"
prost-derive = "^0.6"
raft         = { git = "https://github.com/tikv/raft-rs", default-features = false, features = ["prost-codec"] }
