[package]
name    = "toshi-proto"
version = "0.1.0"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"
build = "build.rs"

[build-dependencies]
tonic-build       = "^0.4"

[dependencies]
tonic        = "^0.4"
bytes        = "^1"
prost        = "^0.7"
prost-types  = "^0.7"
prost-derive = "^0.8"
raft         = { git = "https://github.com/tikv/raft-rs", default-features = false, features = ["prost-codec"] }
