[package]
name    = "toshi-query"
version = "0.1.0"
description = "A full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"

[dependencies]
tantivy       = "^0.10"
failure       = "^0.1"
serde         = { version = "^1.0", features = ["derive"] }
serde_json    = "^1.0"
log           = { version = "0.4", features = ["std"] }

