[package]
name    = "toshi-raft"
version = "0.1.0"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"

[dependencies]
toshi-proto  = { path = "../toshi-proto" }
toshi-types  = { path = "../toshi-types" }
anyhow       = "^1.0"
bytes        = "^0.5"
futures      = "^0.3"
async-trait  = "^0.1"
http         = "^0.2"
dashmap      = "^3"
tonic        = "^0.3"
prost        = "^0.6"
tantivy      = "^0.13"
slog         = "^2.5"
serde_json   = "^1.0"
tokio        = { version = "^0.2", features = ["full", "parking_lot"] }
serde        = { version = "^1.0", features = ["derive"] }
raft         = { git = "https://github.com/tikv/raft-rs", default-features = false, features = ["prost-codec"] }

[dev-dependencies]
remove_dir_all = "^0.5"
toshi-server = { path = "../toshi-server" }
toshi-test = { path = "../toshi-test" }
