[package]
name = "toshi-raft"
version = "0.1.0"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"

[dependencies]
toshi-proto = { path = "../toshi-proto" }
toshi-types = { path = "../toshi-types" }
anyhow = "^1.0"
bytes = "^1.0.1"
futures = "^0.3"
async-trait = "^0.1"
http = "^0.2"
dashmap = "^4"
tonic = "^0.5"
prost = "^0.7"
tantivy = "^0.15"
slog = "^2.7"
serde_json = "^1.0"
tokio = { version = "^1", features = ["full", "parking_lot"] }
serde = { version = "^1.0", features = ["derive"] }
bincode = "^1.3"
raft = { git = "https://github.com/tikv/raft-rs", default-features = false, features = ["prost-codec"] }
message-io = "^0.14"

[dev-dependencies]
remove_dir_all = "^0.7"
toshi-server = { path = "../toshi-server" }
