[package]
name = "toshi-server"
version = "0.1.1"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2021"
resolver = "2"

[[bin]]
name = "toshi"

[lib]
path = "src/lib.rs"

[features]
extra_tokenizers  = ["cang-jie"]

[dependencies]
toshi-types       = { path = "../toshi-types" }
http              = "^0.2"
bytes             = "^1"
hyper             = { version = "^0.14", features = ["full"] }
serde_json        = "^1.0"
serde_urlencoded  = "^0.7"
futures           = "^0.3"
tower-util        = "^0.3"
tantivy           = "^0.19"
tokio             = { version = "^1", features = ["full"] }
async-trait       = "^0.1"
config            = "^0.13"
structopt         = "^0.3"
thiserror         = "^1.0"
anyhow            = "^1.0"
dashmap           = "^5"
serde             = { version = "^1.0", features = ["derive"] }
clap              = { version = "^4", features = ["color"] }
slog              = "^2.7"
slog-stdlog       = "^4.0"
slog-scope        = "^4.3"
log               = { version = "*", features = ["max_level_trace", "release_max_level_warn"] }
sloggers          = "^2"
toml              = "^0.5"
flume             = { version = "^0.11", features = ["async"] }
itertools         = "^0.10"
tokio-stream      = "^0.1"
tokio-util        = { version = "^0.7", features = ["full"] }
cang-jie          = { version = "^0.14", optional = true }


[dev-dependencies]
remove_dir_all    = "^0.7"
pretty_assertions = "^1"
tokio-test        = "^0.4"
toshi             = { path = "../toshi-client", default-features = false, features = ["hyper_client"] }
