[package]
name    = "toshi-test"
version = "0.1.0"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "A full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"

[dependencies]
bytes      = "^0.6"
hyper      = { git = "https://github.com/hyperium/hyper", features = ["stream"] }
http       = "^0.2"
futures    = "^0.3"
tokio      = { version = "^0.3", features = ["full"] }
tantivy    = { git = "https://github.com/tantivy-search/tantivy", branch = "main" }
serde      = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
