[package]
name    = "toshi-types"
version = "0.1.1"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "The types for a full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2018"

[dependencies]
http        = "^0.2"
thiserror   = "^1.0"
anyhow      = "^1.0"
serde       = "^1.0"
serde_json  = "^1.0"
tantivy     = { git = "https://github.com/tantivy-search/tantivy", branch = "main" }
async-trait = "^0.1"
dashmap     = { version = "^3", features = ["serde"] }
slog        = "^2.5"
tokio       = { version = "^1", features = ["sync"] }
toml        = "^0.5"

[dependencies.tonic]
version  = "^0.3"
optional = true

[dependencies.hyper]
version = "^0.14"
optional = true

[features]
default      = ["extra-errors"]
extra-errors = ["tonic", "hyper"]
