[package]
name    = "toshi-types"
version = "0.1.1"
authors = ["Stephen Carman <shcarman@gmail.com>"]
description = "The types for a full text search engine based on Tantivy"
repository = "https://github.com/toshi-search/Toshi"
license = "MIT"
edition = "2021"
resolver = "2"

[dependencies]
http        = "^1.0"
thiserror   = "^1.0"
anyhow      = "^1.0"
serde       = "^1.0"
serde_json  = "^1.0"
tantivy     = "^0.19"
async-trait = "^0.1"
dashmap     = { version = "^5", features = ["serde"] }
slog = "^2.7"
tokio = { version = "^1.13", features = ["sync"] }
toml = "^0.5"

[dependencies.hyper]
version  = "^0.14"
optional = true

[features]
default      = ["extra-errors"]
extra-errors = ["hyper"]
